[tool.poetry]
name = "escv-web"
version = "0.1.0"
description = ""
authors = ["escv"]
license = "MIT"
readme = "README.md"
packages = [{include = "escv_web"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
